--- a/config/generate_artificial_dataset.yaml
+++ b/config/generate_artificial_dataset.yaml
@@ -1,9 +1,9 @@
-output : output # path to the output folder
-min_length: 20  # minimum length of the oligos
-max_length: 20  # maximum length of the oligos
-file_genes: "data/genes/custom_100.txt"  # path to the file containing the desired genes
-num_mutations: 10  # maximum number of mutated nucleotides
-num_sampled: 500  # number of sampled oligos (the final dataset size will be O(M*s*n) )
+output : data/datasets # path to the folder where the dataset will be stored
+min_length: 15  # minimum length of the oligos
+max_length: 15  # maximum length of the oligos
+file_genes: "data/genes/custom_10.txt"  # path to the file containing the desired genes
+n_mutations: 10  # maximum number of mutated nucleotides
+n_sampled: 10  # number of sampled oligos (the final dataset size will be O(M*s*n) )
 concentration: 1e-6  # strand concentrations int the tube
 annotation_source: custom  # source of the genomic files, available options are [custom, ncbi, ensembl]
 taxon: vertebrate_mammalian  # taxon of teh species we are intereste, oly for source: ncbi
