--- a/config/train_LSTM.yaml
+++ b/config/train_LSTM.yaml
@@ -1,4 +1,5 @@
-dataset_path: data/datasets/artificial_dataset_35_35.csv   # path to the dataset
+train_dataset_path: data/datasets/artificial_dataset_15_100_train.csv   # path to the train dataset
+validation_dataset_path: data/datasets/artificial_dataset_15_100_validation.csv   # path to the validation dataset
 models_path: data/models
 
 # fixed hyperparameters
@@ -8,7 +9,7 @@ features_size: 6 # number of additional features
 
 n_trials: 50  # number of hyperparameters combinations optuna will try
 n_epochs: 1000 # maximum number of epoch executed during training 
-split_lengths: [0.4, 0.2, 0.4]  # train , validation and test splits
+
 split_seed: 1234
 patience: 50
 scheduler_factor: 0.5
@@ -21,6 +22,7 @@ n_layers_mlp: [1,5] # number of layers of the mlps
 act_function: [relu, tanh]  # activation function of the mlp blocks
 pool: [max, min, mean, sum]
 dropout: [0, 0.5]
+bidirectional: [True, False]
 
 batch_size: [32, 256]
 lr: [0.00001, 0.01] # learning rate sampled from a loguniform distribution
