--- a/config/generate_artificial_dataset.yaml
+++ b/config/generate_artificial_dataset.yaml
@@ -14,6 +14,8 @@ species: Homo_sapiens # optional: species of provided annotation, leave empty if
 annotation_release: 110 # optional: release number of provided annotation, leave empty if unknown
 n_jobs: 5  # number of available CPUs (if None the maximum number of CPUs will be used)
 seed: 42
+nupack_cache: 8.0
+nupack_threads: 2
 
 ######### only for custom source ##########
 file_annotation : data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf  # GTF file with gene annotation
