--- a/config/train_RNN.yaml
+++ b/config/train_RNN.yaml
@@ -15,13 +15,15 @@ scheduler_patience: 15
 
 # tunable hyperparameters: will be sampled in the interval [min, max]
 hidden_size: [32, 128] # dimension of the hidden layers
-n_layers: [1, 2]  # number of stacked rnns
-n_layers_mlp: [1,5] # number of layers of the mlps
+hidden_size_ecoder: [16, 64] # dimension of the hidden layer of the ecoder
+n_layers: [1, 4]  # number of stacked rnns
+n_layers_mlp: [2,5] # number of layers of the mlps
+n_layers_encoder: [2, 5] # number of layers of the encoder
 nonlinearity: [relu, tanh]  # non -linear function of the RNN block
 act_function: [relu, tanh]  # activation function of the mlp blocks
 pool: [max, min, mean, sum]
-dropout: [0, 0.5]
+dropout: [0, 0.2]
 bidirectional: [True, False]
 
 batch_size: [32, 256]
-lr: [0.00001, 0.01] # learning rate sampled from a loguniform distribution
+lr: [0.0001, 0.001] # learning rate sampled from a loguniform distribution
