--- a/config/train_LSTM.yaml
+++ b/config/train_LSTM.yaml
@@ -9,9 +9,9 @@ features_size: 6 # number of additional features
 
 n_trials: 50  # number of hyperparameters combinations optuna will try
 n_epochs: 1000 # maximum number of epoch executed during training 
-patience: 50
+patience: 200
 scheduler_factor: 0.5
-scheduler_patience: 15
+scheduler_patience: 20
 
 # tunable hyperparameters: will be sampled in the interval [min, max]
 hidden_size: [32, 128] # dimension of the hidden layers
@@ -20,7 +20,7 @@ n_layers: [1, 4]  # number of stacked rnns
 n_layers_mlp: [2,5] # number of layers of the mlps
 n_layers_encoder: [2, 5] # number of layers of the encoder
 act_function: [relu, tanh]  # activation function of the mlp blocks
-pool: [max, min, mean, sum]
+pool: [max, sum]
 dropout: [0, 0.2]
 bidirectional: [True, False]
 
